# poetry-template

./: .envrc  README.MD  main.py  pyproject.toml
nix/: env.nix  packages.nix  shells.nix
